--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  
-  <title>REP-Form</title>
-</head><body>
-  <p><a href="https://lam-dev.hres.ca/REP-Form/index-en.html">REP-Form English</a></p>
-  <p><a href="https://lam-dev.hres.ca/REP-Form/index-fr.html">REP-Form Français</a></p>
-
-
-</body></html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+ <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+ <title>REP-Form</title>
+<body>
+ <p><a href="/REP-Form/index-en.html">REP-Form English</a></p>
+ <p><a href="/REP-Form/index-fr.html">REP-Form Français</a></p>
+</body>
+</html>
