Dossier Nov 1 deployment. Functionality completed

--- a/index-en.html
+++ b/index-en.html
@@ -161,7 +161,7 @@
                 <a href="activityEnrolEXT-en.html">Activity Enrolment -External (Oct 24)</a>
             </div>
             <div class="row">
-                <a href="dossier/dossierEnrolEXT-en.html">Dossier Enrolment External (Oct 24)</a>
+                <a href="dossier/dossierEnrolEXT-en.html">Dossier Enrolment External (Nov 1)</a>
             </div>
 
         </div>
@@ -175,6 +175,9 @@
 
             <div class="row">
                 <a href="activityEnrolINT-en.html">Activity Enrolment -Internal (Oct 24)</a>
+            </div>
+            <div class="row">
+                <a href="dossier/dossierEnrolINT-en.html">Dossier Enrolment Internal (Nov 1)</a>
             </div>
 
         </div>
@@ -212,6 +215,13 @@
                     <li>All forms: stylesheet reference for xml, removed checksum calculation</li>
                     <li>Activity: minor bug fix to related activities</li>
                     <li>Dossier: Validation, labelling, save and load capability</li>
+                </ul>
+            </row>
+            <row>
+                <h2>Summary of changes for Nov 1</h2>
+                <ul>
+                    <li>Dossier: Completed behaviour and functionality.</li>
+                    <li>Dossier: Fixed UI inconsistencies</li>
                 </ul>
             </row>
         </div>
