Nov 15 deployment. Did not clean vcs first

--- a/index-en.html
+++ b/index-en.html
@@ -152,16 +152,16 @@
                 <h2> External User Links</h2>
             </div>
             <div class="row">
-                <a href="companyEnrolEXT-en.html">Company Enrolment -External (Oct 24)</a>
+                <a href="companyEnrolEXT-en.html">Company Enrolment -External (Nov 15)</a>
             </div>
             <div class="row">
-                <a href="transactionEnrol-en.html">Transaction Enrolment -External (Oct 24)</a>
+                <a href="transactionEnrol-en.html">Transaction Enrolment -External (Nov 15)</a>
             </div>
             <div class="row">
-                <a href="activityEnrolEXT-en.html">Activity Enrolment -External (Oct 24)</a>
+                <a href="activityEnrolEXT-en.html">Activity Enrolment -External (Nov 15)</a>
             </div>
             <div class="row">
-                <a href="dossier/dossierEnrolEXT-en.html">Dossier Enrolment External (Nov 1)</a>
+                <a href="dossier/dossierEnrolEXT-en.html">Dossier Enrolment External (Nov 15)</a>
             </div>
 
         </div>
@@ -170,58 +170,23 @@
                 <h2>Internal User (i.e. HPFB) Links</h2>
             </div>
             <div class="row">
-                <a href="companyEnrolINT-en.html">Company Enrolment -Internal (Oct 24) </a>
+                <a href="companyEnrolINT-en.html">Company Enrolment -Internal (Nov 15) </a>
             </div>
 
             <div class="row">
-                <a href="activityEnrolINT-en.html">Activity Enrolment -Internal (Oct 24)</a>
+                <a href="activityEnrolINT-en.html">Activity Enrolment -Internal (Nov 15)</a>
             </div>
             <div class="row">
-                <a href="dossier/dossierEnrolINT-en.html">Dossier Enrolment Internal (Nov 1)</a>
+                <a href="dossier/dossierEnrolINT-en.html">Dossier Enrolment Internal (Nov 15)</a>
             </div>
 
         </div>
         <div>
             <row>
-                <h2>Summary of changes for Oct 3</h2>
+                <h2>Changed All forms- Nov 15</h2>
                 <ul>
-                    <li>Dossier Error handling at field level for Drug Product and Appendix 4</li>
-                    <li>Dossier Appendix 4 UI Improvements</li>
-                </ul>
-            </row>
-            <row>
-                <h2>Summary of changes for Oct 6</h2>
-                <ul>
-                    <li>Fixed bug with adding more than Related Activiy</li>
-                    <li>Fixed bug with Related Activity date format</li>
-                </ul>
-            </row>
-            <row>
-                <h2>Summary of changes for Oct 11</h2>
-                <ul>
-                    <li>Field level Validation for Dossier</li>
-                    <li>UI improvements for Dossier</li>
-                </ul>
-            </row>
-            <row>
-                <h2>Summary of changes for Oct 18</h2>
-                <ul>
-                    <li>Error column for Summary Table (Company,Activity,Transaction)</li>
-                </ul>
-            </row>
-            <row>
-                <h2>Summary of changes for Oct 24</h2>
-                <ul>
-                    <li>All forms: stylesheet reference for xml, removed checksum calculation</li>
-                    <li>Activity: minor bug fix to related activities</li>
-                    <li>Dossier: Validation, labelling, save and load capability</li>
-                </ul>
-            </row>
-            <row>
-                <h2>Summary of changes for Nov 1</h2>
-                <ul>
-                    <li>Dossier: Completed behaviour and functionality.</li>
-                    <li>Dossier: Fixed UI inconsistencies</li>
+                    <li>As per documented design changes</li>
+
                 </ul>
             </row>
         </div>
@@ -231,9 +196,9 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified:&#32;</dt>
+            <dt>Date modified:Nov 15, 2016</dt>
             <dd>
-                <time property="dateModified"><!--build:dateToday--><!--endbuild--> </time>
+                <time property="dateModified">2016-11-15</time>
             </dd>
         </dl>
     </div>
