--- a/activityEnrolINT-en.html
+++ b/activityEnrolINT-en.html
@@ -131,7 +131,7 @@
         <div class="container">
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="https://lam-dev.hres.ca/REP-Form/index.html">Home</a></li>
+                    <li><a href="https://lam-dev.hres.ca/REP-Form/index-en.html">Home</a></li>
                 </ol>
             </div>
         </div>
@@ -158,7 +158,7 @@
         <dl id="wb-dtmd">
             <dt>Date modified:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-10-24 </time>
+                <time property="dateModified">2016-11-15 </time>
             </dd>
         </dl>
     </div>
@@ -277,11 +277,11 @@
 
 <script src="app/scripts/components/contactDetails/cmp-contact-details.js"></script>
 
-<script src="app/scripts/components/activityMain/cmp-activity-main.js"></script>
-
 <script src="app/scripts/components/applicationInfo/cmp-application-info.js"></script>
 
 <script src="app/scripts/components/activityRationale/cmp-activity-rationale.js"></script>
+
+<script src="app/scripts/components/activityMain/cmp-activity-main.js"></script>
 
 <script src="app/scripts/components/activityChangeType/cmp-activity-change.js"></script>
 
