--- a/companyEnrolEXT-en.html
+++ b/companyEnrolEXT-en.html
@@ -131,7 +131,7 @@
         <div class="container">
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="https://lam-dev.hres.ca/REP-Form/index.html">Home</a></li>
+                    <li><a href="https://lam-dev.hres.ca/REP-Form/index-en.html">Home</a></li>
                 </ol>
             </div>
         </div>
@@ -158,7 +158,7 @@
         <dl id="wb-dtmd">
             <dt>Date modified:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-10-24 </time>
+                <time property="dateModified">2016-11-15 </time>
             </dd>
         </dl>
     </div>
@@ -275,11 +275,11 @@
 
 <script src="app/scripts/components/addressRole/cmp-address-role.js"></script>
 
-<script src="app/scripts/components/addressList/cmp-company-address-list.js"></script>
-
 <script src="app/scripts/components/addressRecord/cmp-address-record.js"></script>
 
 <script src="app/scripts/components/addressDetails/cmp-address-details.js"></script>
+
+<script src="app/scripts/components/addressList/cmp-company-address-list.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
