--- a/dossier/dossierEnrolINT-en.html
+++ b/dossier/dossierEnrolINT-en.html
@@ -131,7 +131,7 @@
         <div class="container">
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="https://lam-dev.hres.ca/REP-Form/index.html">Home</a></li>
+                    <li><a href="https://lam-dev.hres.ca/REP-Form/index-en.html">Home</a></li>
                 </ol>
             </div>
         </div>
@@ -159,7 +159,7 @@
         <dl id="wb-dtmd">
             <dt>Date modified:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-11-01 </time>
+                <time property="dateModified">2016-11-15 </time>
             </dd>
         </dl>
     </div>
@@ -324,13 +324,23 @@
 
 <script src="app/components/applicationInfo/cmp-application-info.js"></script>
 
+<script src="app/components/appendix-four/cmp-tissuesFluids-list.js"></script>
+
 <script src="app/components/appendix-four/cmp-tissues-fluids-origin.js"></script>
+
+<script src="app/components/appendix-four/cmp-tissueFluids-record.js"></script>
 
 <script src="app/components/appendix-four/cmp-source-animal.js"></script>
 
 <script src="app/components/appendix-four/cmp-appendix-four.js"></script>
 
 <script src="app/components/appendix-four/cmp-appendix-four-record.js"></script>
+
+<script src="app/components/appendix-four/cmp-animalSourced-section.js"></script>
+
+<script src="app/components/appendix-four/cmp-animalSourced-record.js"></script>
+
+<script src="app/components/appendix-four/cmp-animalSourced-list.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
