--- a/dossier/dossierEnrolINT-fr.html
+++ b/dossier/dossierEnrolINT-fr.html
@@ -157,7 +157,7 @@
         <dl id="wb-dtmd">
             <dt>Date de modification&#160;:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-11-01 </time>
+                <time property="dateModified">2016-11-15 </time>
             </dd>
         </dl>
     </div>
@@ -326,13 +326,23 @@
 
 <script src="app/components/applicationInfo/cmp-application-info.js"></script>
 
+<script src="app/components/appendix-four/cmp-tissuesFluids-list.js"></script>
+
 <script src="app/components/appendix-four/cmp-tissues-fluids-origin.js"></script>
+
+<script src="app/components/appendix-four/cmp-tissueFluids-record.js"></script>
 
 <script src="app/components/appendix-four/cmp-source-animal.js"></script>
 
 <script src="app/components/appendix-four/cmp-appendix-four.js"></script>
 
 <script src="app/components/appendix-four/cmp-appendix-four-record.js"></script>
+
+<script src="app/components/appendix-four/cmp-animalSourced-section.js"></script>
+
+<script src="app/components/appendix-four/cmp-animalSourced-record.js"></script>
+
+<script src="app/components/appendix-four/cmp-animalSourced-list.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
