--- a/transactionEnrol-en.html
+++ b/transactionEnrol-en.html
@@ -131,7 +131,7 @@
         <div class="container">
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="https://lam-dev.hres.ca/REP-Form/index.html">Home</a></li>
+                    <li><a href="https://lam-dev.hres.ca/REP-Form/index-en.html">Home</a></li>
                 </ol>
             </div>
         </div>
@@ -158,7 +158,7 @@
         <dl id="wb-dtmd">
             <dt>Date modified:&#32;</dt>
             <dd>
-                <time property="dateModified">2016-10-24 </time>
+                <time property="dateModified">2016-11-15 </time>
             </dd>
         </dl>
     </div>
@@ -263,9 +263,9 @@
 
 <script src="app/scripts/components/transactionMain/cmp-transaction-main.js"></script>
 
-<script src="app/scripts/components/transactionCompanyRecord/cmp-transaction-address-record.js"></script>
-
 <script src="app/scripts/components/transactionInfo/cmp-transaction-info.js"></script>
+
+<script src="app/scripts/components/transactionCompanyRecord/cmp-transaction-address-record.js"></script>
 
 <script src="app/scripts/components/repContactList/cmp-rep-contact-list.js"></script>
 
@@ -279,9 +279,9 @@
 
 <script src="app/scripts/components/expandingTable/cmp-expanding-table.js"></script>
 
-<script src="app/scripts/components/countrySelect/cmp-country-select.js"></script>
-
 <script src="app/scripts/components/contactRecord/cmp-contact-record.js"></script>
+
+<script src="app/scripts/components/countrySelect/cmp-country-select.js"></script>
 
 <script src="app/scripts/components/contactList/cmp-company-contact-list.js"></script>
 
