changed home to dev env

--- a/activity/activityEnrolEXT-fr.html
+++ b/activity/activityEnrolEXT-fr.html
@@ -132,7 +132,7 @@
         <div class="container">
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="https://lam-dev.hres.ca/REP-Form/index-fr.html">Accueil</a></li>
+                    <li><a href="https://lam-dev.hres.ca/rep-dev/index-fr.html">Accueil</a></li>
                 </ol>
             </div>
         </div>
