Deployment Feb 10 prod build- hide External links

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="container">
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="https://lam-dev.hres.ca/rep-dev/index.htmlv">Home</a></li>
+                <!--    <li><a href="https://lam-dev.hres.ca/rep-dev/index.htmlv">Home</a></li>-->
                 </ol>
             </div>
         </div>
@@ -147,7 +147,7 @@
         <div class="row">
             <h1 property="name" id="wb-cont"> Regulatory Enrolment Process </h1>
         </div>
-        <div>
+     <!--   <div>
             <div class="row">
                 <h2> External User Links</h2>
             </div>
@@ -163,7 +163,7 @@
             <div class="row">
                 <a href="./dossierEXT-en.html">Dossier Enrolment External (Feb 10)</a>
             </div>
-        </div>
+        </div>-->
         <div>
             <div class="row">
                 <h2>Internal User (i.e. HPFB) Links</h2>
@@ -184,7 +184,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified:Feb 9, 2017</dt>
+            <dt>Date modified:Feb 10, 2017</dt>
         </dl>
     </div>
     </div>
