Use Wet default theme

--- a/test/Facts-Table.html
+++ b/test/Facts-Table.html
@@ -4,7 +4,7 @@
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <title>Drug Facts Table - Draft
+    <title> Canadian Drug Facts Table- Draft for Discussion
     </title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
