Use Wet default theme

--- a/test/Facts-Table.html
+++ b/test/Facts-Table.html
@@ -83,7 +83,7 @@
     <!--  Content starts here-->
     <h1 id="wb-cont" property="name">Tempra Drug Facts - Draft Example</h1>
     <section>
-        <img class="center-block img-responsive" alt="Tempra Drug Label Image" src="assets/tempra_df.png"/>
+        <img class="center-block img-responsive" alt="Tempra Infant Drops Acetaminophen Oral Solution Label" src="assets/tempra_df.png"/>
 
     </section>
 
