--- a/test/Facts-Table.html
+++ b/test/Facts-Table.html
@@ -12,7 +12,7 @@
           content=" Tempura Drug Facts Table">
     <!-- Meta data-->
     <!--[if gte IE 9 | !IE ]><!-->
-    <link href="./theme-base/assets/favicon.ico" rel="icon" type="image/x-icon">
+    <!--<link href="./theme-base/assets/favicon.ico" rel="icon" type="image/x-icon">-->
     <link rel="stylesheet" href="./theme-base/css/theme.min.css">
     <!--<![endif]-->
     <!--[if lt IE 9]>
