--- a/test/Facts-Table.html
+++ b/test/Facts-Table.html
@@ -81,7 +81,7 @@
 <main role="main" property="mainContentOfPage" class="container">
 
     <!--  Content starts here-->
-    <h1 id="wb-cont" property="name">Tempra Drug Facts - Draft Example</h1>
+    <h1 id="wb-cont" property="name">Canadian Drug Facts Table- Draft for Discussion</h1>
     <section>
         <img class="center-block img-responsive" alt="Tempra Infant Drops Acetaminophen Oral Solution Label" src="assets/tempra_df.png"/>
 
