--- a/test/Facts-Table.html
+++ b/test/Facts-Table.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./theme-base/css/theme.min.css">
     <!--<![endif]-->
     <!--[if lt IE 9]>
-    <link href="./theme-base/assets/favicon.ico" rel="shortcut icon"/>
+   <!-- <link href="./theme-base/assets/favicon.ico" rel="shortcut icon"/>-->
     <link rel="stylesheet" href="./theme-base/css/ie8-theme.min.css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="./wet-boew/js/ie8-wet-boew.min.js"></script>
