--- a/test/Facts-Table2.html
+++ b/test/Facts-Table2.html
@@ -8,7 +8,8 @@
     </title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
-    <meta name="description" content=" Tempura Drug Facts Table">
+    <meta name="description"
+          content=" Tempura Drug Facts Table">
     <!-- Meta data-->
     <!--[if gte IE 9 | !IE ]><!-->
     <!--<link href="./theme-base/assets/favicon.ico" rel="icon" type="image/x-icon">-->
@@ -45,6 +46,13 @@
                             <li class="curr">English&#32;<span>(current)</span></li>
                         </ul>
                     </section>
+                    <!--<section class="wb-mb-links col-xs-12 visible-sm visible-xs" id="wb-glb-mn">
+                    <h2>Search and menus</h2>
+                    <ul class="pnl-btn list-inline text-right">
+                    <li><a href="#mb-pnl" title="Search and menus" aria-controls="mb-pnl" class="overlay-lnk btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-search"><span class="glyphicon glyphicon-th-list"><span class="wb-inv">Search and menus</span></span></span></a></li>
+                    </ul>
+                    <div id="mb-pnl"></div>
+                    </section>-->
                 </div>
             </div>
         </div>
@@ -52,6 +60,22 @@
     </div>
 
     <nav role="navigation" id="wb-bc" property="breadcrumb">
+        <!--<h2>You are here:</h2>
+        <div class="container">
+        <div class="row">
+        <ol class="breadcrumb">
+        <li>
+        <a href="http://wet-boew.github.io/v4.0-ci/index-en.html">Home</a>
+        </li>
+        <li>
+        <a href="http://wet-boew.github.io/v4.0-ci/demos/index-eStay connected
+        <li>
+        <a href="index-en.html">Base theme</a>
+        </li>
+        <li>Content page</li>
+        </ol>
+        </div>
+        </div>-->
     </nav>
 </header>
 <main role="main" property="mainContentOfPage" class="container">
@@ -288,7 +312,7 @@
                     </section>
                 </div>
             </div>
-       <!--     <div class="row">
+            <div class="row">
                 <div class="col-xs-12">
                     <section class="brdr-tp brdr-bttm">
                         <div class="mrgn-lft-sm mrgn-rght-sm">
@@ -300,7 +324,7 @@
                         </div>
                     </section>
                 </div>
-            </div>-->
+            </div>
         </div>
     </div>
 
@@ -309,7 +333,7 @@
     <dl id="wb-dtmd">
         <dt>Date modified:&#32;</dt>
         <dd>
-            <time property="dateModified">2014-02-23</time>
+            <time property="dateModified">2014-02-24</time>
         </dd>
     </dl>
 </main>
