--- a/test/Facts-Table.html
+++ b/test/Facts-Table.html
@@ -4,20 +4,23 @@
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <title> Canadian Drug Facts Table- Draft for Discussion
+    <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
+    wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
+    <title>Drug Facts Table Example
     </title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
-    <meta name="description" content=" Tempura Drug Facts Table">
+    <meta name="description"
+          content="Tempra Druf Facts table">
     <!-- Meta data-->
     <!--[if gte IE 9 | !IE ]><!-->
     <!--<link href="./theme-base/assets/favicon.ico" rel="icon" type="image/x-icon">-->
     <link rel="stylesheet" href="./theme-base/css/theme.min.css">
     <!--<![endif]-->
     <!--[if lt IE 9]>
-   <!-- <link href="./theme-base/assets/favicon.ico" rel="shortcut icon"/>-->
+    <link href="" rel="shortcut icon"/>
     <link rel="stylesheet" href="./theme-base/css/ie8-theme.min.css"/>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
     <script src="./wet-boew/js/ie8-wet-boew.min.js"></script>
     <![endif]-->
     <noscript>
@@ -25,44 +28,20 @@
     </noscript>
 </head>
 <body vocab="http://schema.org/" typeof="WebPage">
-<!--<ul id="wb-tphp">
-<li class="wb-slc">
-<a class="wb-sl" href="#wb-cont">Skip to main content</a>
-</li>
-<li class="wb-slc visible-sm visible-md visible-lg">
-<a class="wb-sl" href="#wb-info">Skip to "About this site"</a>
-</li>
-</ul>-->
-<header role="banner">
-    <div id="wb-bnr">
-        <div id="wb-bar">
-            <div class="container">
-                <div class="row">
-                    <section id="wb-lng" class="visible-md visible-lg">
-                        <h2>Language selection</h2>
-                        <ul class="text-right">
-                            <li><a lang="fr" hreflang="fr" href="content-fr.html">Français</a></li>
-                            <li class="curr">English&#32;<span>(current)</span></li>
-                        </ul>
-                    </section>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-    <nav role="navigation" id="wb-bc" property="breadcrumb">
-    </nav>
+<ul id="wb-tphp">
+    <li class="wb-slc">
+        <a class="wb-sl" href="#wb-cont">Skip to main content</a>
+    </li>
+    <li class="wb-slc visible-sm visible-md visible-lg">
+        <a class="wb-sl" href="#wb-info">Skip to "About this site"</a>
+    </li>
+</ul>
 </header>
 <main role="main" property="mainContentOfPage" class="container">
-
-    <!--  Content starts here-->
     <h1 id="wb-cont" property="name">Canadian Drug Facts Table- Draft for Discussion</h1>
     <section>
         <img class="center-block img-responsive" alt="Tempra Infant Drops Acetaminophen Oral Solution Label" src="assets/tempra_df.png"/>
-
     </section>
-
     <div>
         <div class="brdr-lft brdr-rght brdr-tp brdr-bttm">
             <div class="row">
@@ -288,7 +267,7 @@
                     </section>
                 </div>
             </div>
-       <!--     <div class="row">
+        <!--    <div class="row">
                 <div class="col-xs-12">
                     <section class="brdr-tp brdr-bttm">
                         <div class="mrgn-lft-sm mrgn-rght-sm">
@@ -305,19 +284,46 @@
     </div>
 
     <!--Content ends-->
-
     <dl id="wb-dtmd">
         <dt>Date modified:&#32;</dt>
         <dd>
-            <time property="dateModified">2014-02-23</time>
+            <time property="dateModified">2014-02-24</time>
         </dd>
     </dl>
 </main>
 <footer role="contentinfo" id="wb-info" class="visible-sm visible-md visible-lg wb-navcurr">
-    <div class="container">
-        <nav role="navigation" class="row">
-        </nav>
-    </div>
+    <!-- <div class="container">
+         <nav role="navigation" class="row">
+             <h2>About this site</h2>
+             <section class="col-sm-3">
+                 <h3>Contact us</h3>
+                 <ul class="list-unstyled">
+                     <li><a href="https://github.com/wet-boew/wet-boew/issues/new">Questions or comments?</a></li>
+                 </ul>
+             </section>
+             <section class="col-sm-3">
+                 <h3>About</h3>
+                 <ul class="list-unstyled">
+                     <li><a href="http://wet-boew.github.io/v4.0-ci/index-en.html#about">About the Web Experience
+                         Toolkit</a></li>
+                     <li><a href="http://www.tbs-sct.gc.ca/ws-nw/index-eng.asp">About the Web Standards</a></li>
+                 </ul>
+             </section>
+             <section class="col-sm-3">
+                 <h3>News</h3>
+                 <ul class="list-unstyled">
+                     <li><a href="https://github.com/wet-boew/wet-boew/pulse">Recent project activity</a></li>
+                     <li><a href="https://github.com/wet-boew/wet-boew/graphs">Project statistics</a></li>
+                 </ul>
+             </section>
+             <section class="col-sm-3">
+                 <h3>Stay connected</h3>
+                 <ul class="list-unstyled">
+                     <li><a href="https://twitter.com/WebExpToolkit">Twitter</a></li>
+                 </ul>
+             </section>
+         </nav>
+     </div>-->
 </footer>
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
