Fixed demo facts table

--- a/test/Facts-Table.html
+++ b/test/Facts-Table.html
@@ -36,6 +36,23 @@
         <a class="wb-sl" href="#wb-info">Skip to "About this site"</a>
     </li>
 </ul>
+<header role="banner">
+    <div id="wb-bnr">
+        <div id="wb-bar">
+            <div class="container">
+                <div class="row">
+                    <section id="wb-lng" class="visible-md visible-lg">
+                        <h2>Language selection</h2>
+                        <ul class="text-right">
+                            <li><a lang="fr" hreflang="fr" href="content-fr.html">Français</a></li>
+                            <li class="curr">English&#32;<span>(current)</span></li>
+                        </ul>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 <main role="main" property="mainContentOfPage" class="container">
     <h1 id="wb-cont" property="name">Canadian Drug Facts Table- Draft for Discussion</h1>
     <section>
@@ -266,7 +283,7 @@
                     </section>
                 </div>
             </div>
-        <!--    <div class="row">
+          <!--  <div class="row">
                 <div class="col-xs-12">
                     <section class="brdr-tp brdr-bttm">
                         <div class="mrgn-lft-sm mrgn-rght-sm">
