--- a/test/Facts-Table2.html
+++ b/test/Facts-Table2.html
@@ -36,7 +36,23 @@
         <a class="wb-sl" href="#wb-info">Skip to "About this site"</a>
     </li>
 </ul>
-
+<header role="banner">
+    <div id="wb-bnr">
+        <div id="wb-bar">
+            <div class="container">
+                <div class="row">
+                    <section id="wb-lng" class="visible-md visible-lg">
+                        <h2>Language selection</h2>
+                        <ul class="text-right">
+                            <li><a lang="fr" hreflang="fr" href="content-fr.html">Français</a></li>
+                            <li class="curr">English&#32;<span>(current)</span></li>
+                        </ul>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 <main role="main" property="mainContentOfPage" class="container">
     <h1 id="wb-cont" property="name">Canadian Drug Facts Table- Draft for Discussion</h1>
     <section>
