--- a/test/Facts-Table2.html
+++ b/test/Facts-Table2.html
@@ -14,7 +14,7 @@
           content="Tempra Druf Facts table">
     <!-- Meta data-->
     <!--[if gte IE 9 | !IE ]><!-->
-    <!--<link href="./theme-base/assets/favicon.ico" rel="icon" type="image/x-icon">-->
+    <!--<link href="" rel="icon" type="image/x-icon">-->
     <link rel="stylesheet" href="./theme-base/css/theme.min.css">
     <!--<![endif]-->
     <!--[if lt IE 9]>
