transaction data and css definitions

--- a/transaction/transactionEnrolEXT-en.html
+++ b/transaction/transactionEnrolEXT-en.html
@@ -28,8 +28,11 @@
 
     <![endif]-->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="./app/styles/rep.css ">
+
     <!-- inject:css -->
+    <link rel="stylesheet" href="app/styles/rep.css">
+    <link rel="stylesheet" href="app/styles/select.min.css">
+    <link rel="stylesheet" href="app/styles/select2.min.css">
     <!-- endinject -->
     <noscript>
         <link rel="stylesheet" href="./wet-boew/css/noscript.min.css"/>
