March 24 build deployment. Bug fixes to file naming convention and activity data bug

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="0"/>
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
     wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
     <title>Pilot: REP Forms for Health Canada</title>
@@ -148,7 +151,7 @@
         </div>
         <div>
             <div class="row">
-                <h2>REP Form Links (Last updated: Feb 21, 2017)</h2>
+                <h2>REP Form Links (Last updated: March 28, 2017)</h2>
             </div>
             <div class="row">
                 <div class="col-md-12 form-group">
@@ -162,12 +165,12 @@
             </div>
             <div class="row">
                 <div class="col-md-12 form-group">
-                    <a href="activityEXT-en.html">Regulatory Activity Enrolment</a>
+                    <a href="./activity/activityEXT-en.html">Regulatory Activity Enrolment</a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12 form-group">
-                    <a href="transactionEXT-en.html">Regulatory Transaction Enrolment</a>
+                    <a href="./transaction/transactionEXT-en.html">Regulatory Transaction Enrolment</a>
                 </div>
             </div>
         </div>
@@ -178,7 +181,7 @@
     <div class="row">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date modified: Feb 21, 2017</dt>
+                <dt>Date modified: March 28, 2017</dt>
             </dl>
         </div>
     </div>
