Changed styling for the borders

--- a/test/Facts-Table.html
+++ b/test/Facts-Table.html
@@ -11,10 +11,10 @@
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="description"
-          content="Tempra Druf Facts table">
+          content="Tempra Drug Facts table">
     <!-- Meta data-->
     <!--[if gte IE 9 | !IE ]><!-->
-    <!--<link href="" rel="icon" type="image/x-icon">-->
+    <!--<link href="./theme-base/assets/favicon.ico" rel="icon" type="image/x-icon">-->
     <link rel="stylesheet" href="./theme-base/css/theme.min.css">
     <!--<![endif]-->
     <!--[if lt IE 9]>
@@ -26,6 +26,7 @@
     <noscript>
         <link rel="stylesheet" href="./wet-boew/css/noscript.min.css"/>
     </noscript>
+    <link rel="stylesheet" href="./dft.css"/>
 </head>
 <body vocab="http://schema.org/" typeof="WebPage">
 <ul id="wb-tphp">
@@ -36,22 +37,6 @@
         <a class="wb-sl" href="#wb-info">Skip to "About this site"</a>
     </li>
 </ul>
-<header role="banner">
-    <div id="wb-bnr">
-        <div id="wb-bar">
-            <div class="container">
-                <div class="row">
-                    <section id="wb-lng" class="visible-md visible-lg">
-                        <h2>Language selection</h2>
-                        <ul class="text-right">
-                            <li><a lang="fr" hreflang="fr" href="content-fr.html">Français</a></li>
-                            <li class="curr">English&#32;<span>(current)</span></li>
-                        </ul>
-                    </section>
-                </div>
-            </div>
-        </div>
-    </div>
 </header>
 <main role="main" property="mainContentOfPage" class="container">
     <h1 id="wb-cont" property="name">Canadian Drug Facts Table- Draft for Discussion</h1>
@@ -59,7 +44,7 @@
         <img class="center-block img-responsive" alt="Tempra Infant Drops Acetaminophen Oral Solution Label" src="assets/tempra_df.png"/>
     </section>
     <div>
-        <div class="brdr-lft brdr-rght brdr-tp brdr-bttm">
+        <div class="cft-box-top cft-box-right cft-box-left cft-box-bottom">
             <div class="row">
                 <section class="col-md-8 col-xs-12">
                     <div class="mrgn-lft-sm mrgn-rght-sm">
@@ -81,7 +66,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <section class="brdr-tp brdr-bttm">
+                    <section class="cft-box-top cft-box-bottom">
                         <div class="mrgn-lft-sm mrgn-rght-sm">
                             <h2>Uses</h2>
                             <ul>
@@ -106,7 +91,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <section class=" brdr-tp brdr-bttm">
+                    <section>
                         <div class="mrgn-lft-sm mrgn-rght-sm">
                             <h2>Warnings</h2>
                             <h3 class="text-danger">Liver Warning</h3>
@@ -136,7 +121,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 mrgn-lft-sm">
-                    <section class="brdr-tp brdr-bttm">
+                    <section class="cft-hl-top">
                         <div class="mrgn-lft-sm mrgn-rght-sm">
                             <h3>Alergy alert</h3>
                             <p>
@@ -155,7 +140,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <section class="brdr-tp brdr-bttm">
+                    <section class="cft-hl-top">
                         <div class="mrgn-lft-sm mrgn-rght-sm">
                             <h3>Do not use</h3>
                             <ul>
@@ -170,7 +155,7 @@
             </div>
             <div class="row ">
                 <div class="col-xs-12">
-                    <section class="brdr-tp brdr-bttm">
+                    <section class="cft-hl-top">
                         <div class="mrgn-lft-sm mrgn-rght-sm">
                             <h3>Ask a doctor</h3>
                             <ul>
@@ -183,7 +168,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <section class="brdr-tp brdr-bttm">
+                    <section class="cft-hl-top">
                         <div class="mrgn-lft-sm mrgn-rght-sm">
                             <h3>Stop use and ask a doctor</h3>
                             <ul>
@@ -196,7 +181,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <section class="brdr-tp brdr-bttm">
+                    <section class="cft-hl-top">
                         <div class="mrgn-lft-sm mrgn-rght-sm">
                             <h3>Ask a healthcare professional before use</h3>
                             <ul>
@@ -208,7 +193,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <section class="brdr-tp brdr-bttm">
+                    <section class="cft-hl-top">
                         <div class="mrgn-lft-sm mrgn-rght-sm">
                             <h3>Keep out of reach of children</h3>
                             <ul>
@@ -225,7 +210,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <section class="brdr-tp brdr-bttm">
+                    <section class="cft-box-top">
                         <div class="mrgn-lft-sm mrgn-rght-sm">
                             <h2>Directions</h2>
                             <p>Do not take more than directed (see liver warnings). Adults and children 12 years and
@@ -245,7 +230,7 @@
 
             <div class="row">
                 <div class="col-xs-12">
-                    <section class="brdr-tp brdr-bttm">
+                    <section class="cft-box-top">
                         <div class="mrgn-lft-sm mrgn-rght-sm">
                             <h2>Other Information</h2>
                             <ul>
@@ -258,7 +243,7 @@
 
             <div class="row">
                 <div class="col-xs-12">
-                    <section class="brdr-tp brdr-bttm">
+                    <section class="cft-box-top">
                         <div class="mrgn-lft-sm mrgn-rght-sm">
                             <h2> Inactive Ingredients</h2>
                             <ul>
@@ -270,7 +255,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <section class="brdr-tp brdr-bttm">
+                    <section class="cft-box-top">
                         <div class="mrgn-lft-sm mrgn-rght-sm">
                             <h2>Questions?</h2>
                             <ul>
@@ -283,9 +268,9 @@
                     </section>
                 </div>
             </div>
-          <!--  <div class="row">
+        <!--    <div class="row">
                 <div class="col-xs-12">
-                    <section class="brdr-tp brdr-bttm">
+                    <section class="cft-hl-top brdr-bttm">
                         <div class="mrgn-lft-sm mrgn-rght-sm">
                             <h2>XML Source file</h2>
                             <p>
