CSP forms update. Completed error summary/ error handling

--- a/csp/cspEXT-fr.html
+++ b/csp/cspEXT-fr.html
@@ -11,7 +11,7 @@
 
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
     wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-    <title>fr_Health Canada CSP Template</title>
+    <title>fr_Health Canada CSP Form</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="description"
@@ -166,7 +166,7 @@
         <dl id="wb-dtmd">
             <dt>Date de modification&#160;:&#32;</dt>
             <dd>
-                <time property="dateModified">2017-04-20 </time>
+                <time property="dateModified">2017-04-27 </time>
             </dd>
         </dl>
     </div>
@@ -249,7 +249,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/translations_20170420_0841.js"></script>
+<script src="app/scripts/translations_20170427_1711.js"></script>
 
 <script src="app/scripts/cspAppEXT-fr.js"></script>
 
@@ -275,6 +275,8 @@
 
 <script src="app/scripts/components/error-summary/cmp-error-summary.js"></script>
 
+<script src="app/scripts/components/error-message/cmp-error-message.js"></script>
+
 <script src="app/scripts/components/cspTimelySubmission/cmp-csp-timely-submission.js"></script>
 
 <script src="app/scripts/components/cspPatent/cmp-csp-patent.js"></script>
@@ -289,11 +291,13 @@
 
 <script src="app/scripts/components/cspContactRecord/cmp-csp-applicant.js"></script>
 
+<script src="app/scripts/components/cspContactList/cmp-csp-applicant-list.js"></script>
+
 <script src="app/scripts/components/cspCertification/cmp-csp-certification.js"></script>
 
-<script src="app/scripts/components/addressDetails/cmp-address-details.js"></script>
-
 <script src="app/scripts/components/contactDetails/cmp-contact-details.js"></script>
+
+<script src="app/scripts/components/addressDetails/cmp-address-details.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
