--- a/company/companyEnrolINT-fr.html
+++ b/company/companyEnrolINT-fr.html
@@ -4,24 +4,29 @@
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
+    <!--No cache-->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="0"/>
+
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
     wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
     <title>fr_Health Canada Company Template</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="description"
-          content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
+          content="REP Forms">
     <!-- Meta data-->
     <!--[if gte IE 9 | !IE ]><!-->
-    <link href="./GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
-    <link rel="stylesheet" href="./GCWeb/css/theme.min.css">
+    <link href="./../GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
+    <link rel="stylesheet" href="./../GCWeb/css/theme.min.css">
     <!--<![endif]-->
     <!--[if lt IE 9]>
-    <link href="./GCWeb/assets/favicon.ico" rel="shortcut icon"/>
+    <link href="./../GCWeb/assets/favicon.ico" rel="shortcut icon"/>
 
-    <link rel="stylesheet" href="./GCWeb/css/ie8-theme.min.css"/>
+    <link rel="stylesheet" href="./../GCWeb/css/ie8-theme.min.css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="./wet-boew/js/ie8-wet-boew.min.js"></script>
+    <script src="./../wet-boew/js/ie8-wet-boew.min.js"></script>
     <![endif]-->
     <!--[if lte IE 9]>
 
@@ -35,7 +40,7 @@
     <link rel="stylesheet" href="app/styles/select2.min.css">
     <!-- endinject -->
     <noscript>
-        <link rel="stylesheet" href="./wet-boew/css/noscript.min.css"/>
+        <link rel="stylesheet" href="./../wet-boew/css/noscript.min.css"/>
     </noscript>
     <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
     <script>dataLayer1 = [];</script>
@@ -79,7 +84,7 @@
         <div class="row">
             <div class="brand col-xs-8 col-sm-9 col-md-6">
                 <a href="http://www.canada.ca/fr/index.html">
-                    <object type="image/svg+xml" tabindex="-1" data="./GCWeb/assets/sig-blk-fr.svg"></object>
+                    <object type="image/svg+xml" tabindex="-1" data="./../GCWeb/assets/sig-blk-fr.svg"></object>
                     <span class="wb-inv"> Gouvernement du Canada</span></a>
             </div>
             <section class="wb-mb-links col-xs-4 col-sm-3 visible-sm visible-xs" id="wb-glb-mn">
@@ -110,7 +115,7 @@
 </section>
         </div>
     </div>
-    <nav role="navigation" id="wb-sm" data-ajax-replace="./ajax/sitemenu-fr.html" data-trgt="mb-pnl"
+    <nav role="navigation" id="wb-sm" data-ajax-replace="./../ajax/sitemenu-fr.html" data-trgt="mb-pnl"
          class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
         <div class="container nvbar">
             <h2>Menu des sujets</h2>
@@ -161,7 +166,7 @@
         <dl id="wb-dtmd">
             <dt>Date de modification&#160;:&#32;</dt>
             <dd>
-                <time property="dateModified">2017-03-17 </time>
+                <time property="dateModified">2017-05-03 </time>
             </dd>
         </dl>
     </div>
@@ -211,7 +216,7 @@
                     <a href="#wb-cont">Haut de la page <span class="glyphicon glyphicon-chevron-up"></span></a>
                 </div>
                 <div class="col-xs-6 col-md-2 text-right">
-                    <object type="image/svg+xml" tabindex="-1" role="img" data="./GCWeb/assets/wmms-blk.svg"
+                    <object type="image/svg+xml" tabindex="-1" role="img" data="./../GCWeb/assets/wmms-blk.svg"
                             aria-label="Symbole du gouvernement du Canada"></object>
                 </div>
             </div>
@@ -220,13 +225,13 @@
 </footer>
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-<script src="./wet-boew/js/wet-boew.min.js"></script>
+<script src="./../wet-boew/js/wet-boew.min.js"></script>
 <!--<![endif]-->
 <!--[if lt IE 9]>
-<script src="./wet-boew/js/ie8-wet-boew2.min.js"></script>
+<script src="./../wet-boew/js/ie8-wet-boew2.min.js"></script>
 
 <![endif]-->
-<script src="./GCWeb/js/theme.min.js"></script>
+<script src="./../GCWeb/js/theme.min.js"></script>
 
 <!--Start add custom scripts here-->
 
@@ -246,7 +251,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/translations_20170317_0925.js"></script>
+<script src="app/scripts/translations_20170503_0757.js"></script>
 
 <script src="app/scripts/companyAppINT-fr.js"></script>
 
@@ -270,11 +275,15 @@
 
 <script src="app/scripts/components/expandingTable/cmp-expanding-table.js"></script>
 
+<script src="app/scripts/components/error-summary/cmp-error-summary.js"></script>
+
+<script src="app/scripts/components/error-message/cmp-error-message.js"></script>
+
 <script src="app/scripts/components/dossierIdDetails/cmp-dossier-id-details.js"></script>
 
-<script src="app/scripts/components/contactList/cmp-company-contact-list.js"></script>
-
 <script src="app/scripts/components/contactRecord/cmp-contact-record.js"></script>
+
+<script src="app/scripts/components/contactList/cmp-company-contact-list.js"></script>
 
 <script src="app/scripts/components/contactDetails/cmp-contact-details.js"></script>
 
@@ -298,6 +307,8 @@
 <script src="app/lib/deep-diff-0.3.4.min.js"></script>
 
 <script src="app/lib/FileSaver.min.js"></script>
+
+<script src="app/lib/focusIf.min.js"></script>
 
 <script src="app/lib/select.min.js"></script>
 
