Update french index page

--- a/index-fr.html
+++ b/index-fr.html
@@ -139,6 +139,26 @@
 <main role="main" property="mainContentOfPage" class="container">
 
     <!--content starts here -->
+
+    <div>
+        <div class="row">
+            <h2> CSP Form -French index page</h2>
+        </div>
+        <div class="row">
+            <a href="./csp/cspEXT-en.html">CSP Form English-External(May 16)</a>
+        </div>
+        <div class="row">
+            <a href="./csp/cspINT-en.html">CSP Form English-Internal (May 16)</a>
+        </div>
+        <div class="row">
+            <a href="./csp/cspEXT-fr.html">CSP Form French-External (May 16)</a>
+        </div>
+        <div class="row">
+            <a href="./csp/cspINT-fr.html">CSP Form French-Internal (May 16)</a>
+        </div>
+    </div>
+
+
     <div>
         <h1 property="name" id="wb-cont"> Regulatory Enrolment Process Last Deployed: Sept 16 </h1>
         <div>
