Updates for cache

--- a/csp/cspEXT-en.html
+++ b/csp/cspEXT-en.html
@@ -91,10 +91,10 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/rep-dev/index.html"}],
+        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/rep_test/index.html"}],
         lngLinks:[{
            lang:"fr",
-            href:"",
+            href:"cspEXT-fr.html",
             text:"Français"
         }]
     })
@@ -170,59 +170,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/translations_20170607_1038.js"></script>
-
-<script src="app/scripts/cspAppEXT-en.js"></script>
-
-<script src="app/scripts/services/hpfb-constants.js"></script>
-
-<script src="app/scripts/services/filter-lists.js"></script>
-
-<script src="app/scripts/services/data-lists.js"></script>
-
-<script src="app/scripts/services/data-lists.activity.js"></script>
-
-<script src="app/scripts/services/csp-service.js"></script>
-
-<script src="app/scripts/services/csp-load-service.js"></script>
-
-<script src="app/scripts/services/csp-data-lists.js"></script>
-
-<script src="app/scripts/services/csp-constants.js"></script>
-
-<script src="app/scripts/services/application-info-service.js"></script>
-
-<script src="app/scripts/directives/numberOnly/only-digits.js"></script>
-
-<script src="app/scripts/components/fileIO/FileIO.hpfbFileReader.js"></script>
-
-<script src="app/scripts/components/error-message/cmp-error-message.js"></script>
-
-<script src="app/scripts/components/error-summary/cmp-error-summary.js"></script>
-
-<script src="app/scripts/components/cspTimelySubmission/cmp-csp-timely-submission.js"></script>
-
-<script src="app/scripts/components/cspPatent/cmp-csp-patent.js"></script>
-
-<script src="app/scripts/components/cspMainAppl/cmp-csp-main-application.js"></script>
-
-<script src="app/scripts/components/cspMain/cmp-csp-main.js"></script>
-
-<script src="app/scripts/components/cspHealthCanadaOnly/cmp-csp-hc-only.js"></script>
-
-<script src="app/scripts/components/cspContactList/cmp-csp-applicant-list.js"></script>
-
-<script src="app/scripts/components/cspFeePayment/cmp-csp-fee-payment.js"></script>
-
-<script src="app/scripts/components/cspContactRecord/cmp-csp-applicant.js"></script>
-
-<script src="app/scripts/components/cspCertification/cmp-csp-certification.js"></script>
-
-<script src="app/scripts/components/contactDetails/cmp-contact-details.js"></script>
-
-<script src="app/scripts/components/alertComponent/cmp-alert.js"></script>
-
-<script src="app/scripts/components/addressDetails/cmp-address-details.js"></script>
+<script src="app/scripts/cspAppEXT-en_20170607_1434.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
