--- a/index-fr.html
+++ b/index-fr.html
@@ -142,19 +142,19 @@
 
     <div>
         <div class="row">
-            <h2> CSP Form -French index page</h2>
+            <h2>CSP Form</h2>
         </div>
         <div class="row">
-            <a href="./csp/cspEXT-en.html">CSP Form English-External(May 26)</a>
+            <a href="./csp-cps/certificate-supplementary-protection-form.html">CSP Form English-External (June 8)</a>
         </div>
         <div class="row">
-            <a href="./csp/cspINT-en.html">CSP Form English-Internal (May 26)</a>
+            <a href="./csp-cps/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (June 8)</a>
         </div>
         <div class="row">
-            <a href="./csp/cspEXT-fr.html">CSP Form French-External (May 26)</a>
+            <a href="./csp-cps/formulaire-certificat-protection-supplementaire.html">CSP Form French-External (June 8)</a>
         </div>
         <div class="row">
-            <a href="./csp/cspINT-fr.html">CSP Form French-Internal (May 26)</a>
+            <a href="./csp-cps/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (June 8)</a>
         </div>
     </div>
 
